# covid-analysis

./: pyproject.toml
covid/: GetData.py  cases_confirmed.csv  continent.csv  country.csv  develop.sh  getcoviddata.ipynb  package.json  province_state.csv  sample_text.txt  testingscripts.ipynb
covid/api/: crud.py  database.py  main.py
covid/frontend/: README.md  nuxt.config.js  package.json
covid/frontend/api/: endpoints.js  session.js
covid/frontend/components/: Chart.vue  FooterComponent.vue  HeaderComponent.vue  LocationSelector.vue  LocationTypeSelector.vue  Sidebar.vue
covid/frontend/pages/: index.vue
covid/frontend/store/: index.js
covid/frontend/store/api/: api.js  session.js
covid/notebooks/: api.ipynb  database_connector.ipynb  getcoviddata.ipynb  testingscripts.ipynb  validateData.ipynb
covid/scripts/: GetData.py
tests/: test_covid.py
