[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["brian King <kingbd2@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
numpy = "^1.18.2"
beautifulsoup4 = "^4.8.2"
jupyterlab = "^2.0.1"
requests = "^2.23.0"
xlrd = "^1.2.0"
black = "^19.10b0"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
